@@ -4,8 +4,10 @@
 # (c) 2017 Prof Dr Andreas Müller, Hochschule Rapperswil
 #
 
-
-if [ -d /Applications/Qt5/Qt5.15/5.15.2/clang_64/bin ]
+if [ -d /usr/local/opt/qt5/bin ]
+then
+	PATH=${PATH}:/usr/local/opt/qt5/bin
+elif [ -d /Applications/Qt5/Qt5.15/5.15.2/clang_64/bin ]
 then
 	PATH=${PATH}:/Applications/Qt5/Qt5.15/5.15.2/clang_64/bin
 elif [ -d /Applications/Qt5/Qt5.14/5.14.0/clang_64/bin ]
